Moved the assets back to common, breakage occurs in dev env runs will be looked it
Moved to version 6.4.2.1 bc I felt like it

Moved Minecraft version to 26.1.2

Rolled back the rendering to nested for loops(Yes this is inefficient and will be looked at)